# yougile-mcp

./: .env.example  .gitignore  README.md  client-configs.md  pyproject.toml
src/yougile_mcp/: __init__.py  client.py  config.py  models.py  server.py
